--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@types/knex": "^0.14.5",
     "mysql": "^2.15.0",
     "ts-node": "^4.1.0",
-    "typescript": "^2.7.1"
+    "typescript": "^2.7.1",
+    "json-stable-stringify": "^1.0.1"
   },
   "dependencies": {
     "knex": "^0.14.3"
